fix: wrapped up again

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -293,10 +293,9 @@ table th {
 
 .restaurant {
   .restaurantheading {
-    margin: 100px 0 20px 200px;
+    margin: 50px 0 20px 200px;
     display: flex;
     align-items: center;
-    padding: 20px 200px;
   }
 
   h1 {
